# Onopko_KP3

./: CMakeLists.txt
include/KP3/: classification.h  date.h  toy.h  toy_shop.h  toys_group.h
src/: date.cpp  main.cpp  toy.cpp  toy_shop.cpp  toys_group.cpp
